--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,19 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
   flutter:
     sdk: flutter
+  google_maps_flutter: ^2.2.0
+
+  geolocator: ^7.1.1
+
+  flutter_google_places: ^0.3.0
+
+  awesome_snackbar_content: ^0.0.8
+
+  http: ^0.13.4
+
 
   cloud_firestore: ^4.1.0
   firebase_auth: ^4.1.4
@@ -40,9 +51,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
