--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,17 @@ dependencies:
   flutter:
     sdk: flutter
 
+  #firebase
   cloud_firestore: ^4.1.0
   firebase_auth: ^4.1.4
   firebase_core: ^2.3.0
+
+  #call video
+  agora_rtc_engine: ^5.1.0
+  permission_handler: ^10.2.0
+  provider: ^4.0.3
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
