--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  #Google Sign in
+  google_sign_in: ^5.4.2
+
+  #Google Icon
+  font_awesome_flutter: ^10.3.0
+
+  #State Management
+  provider: ^6.0.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
