--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   #call video
   agora_rtc_engine: ^5.1.0
   permission_handler: ^10.2.0
-  provider: ^4.0.3
+  #provider: ^4.0.3
 
 
 
