--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,13 @@ dependencies:
   #State Management
   provider: ^6.0.4
 
+  #audioplayers
+  audioplayers: ^0.20.1
+
+  #phone_call
+  flutter_phone_direct_caller: ^2.1.1
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -80,6 +87,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/images/
+  - assets/audio/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
